// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CProgress renders correctly 1`] = `
<div
  class="progress"
>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="0"
    class="progress-bar"
    role="progressbar"
    style="width: 0%;"
  >
    
  </div>
</div>
`;

exports[`CProgress renders correctly 2`] = `
<div
  class="test"
  style="height: 2rem;"
>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="20"
    class="progress-bar bg-black"
    role="progressbar"
    style="width: 20%;"
  >
    
  </div>
</div>
`;
